# itmo

1 year/ads labs/1/: 10.py  5.cpp  6.py  7.py
1 year/ads labs/2/: D.c  H.c  tasks.html
1 year/ads labs/3/: C.py  D.py  F.py  G.py  H.py  I.py  J.py  K.cpp  (+1 more)
1 year/misc/: la1.py  la2.py
3 year/bioinf/: ba10c.py  ba10k.py  ba2b.py  ba2f.py  ba3j.py  ba5j.py  ba6d.py  ba7c.py  ba9d.py  ba9g.py  ba9h.py  ba9o.py  bwt.py  rosalind_ba10c.txt  rosalind_ba10k.txt  rosalind_ba2f.txt  rosalind_ba3j.txt  rosalind_ba5j.txt  rosalind_ba6d.txt  rosalind_ba7c.txt  rosalind_ba9d.txt  rosalind_ba9g.txt  rosalind_ba9h.txt  rosalind_ba9o.txt
3 year/networks/: DHCP — Компьютерные сети (07.09.2022 17_40_17).html  DHCP-сервер — Компьютерные сети (07.09.2022 17_40_17).html  note.txt  Протокол IP — Компьютерные сети (07.09.2022 17_40_20).html
3 year/yandex ux/: note!.txt
a&ds labs/S3/A&DS 7/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
andan/: привет.txt
data analysis/lab-3/: df_processed.csv
data analysis/lab-4/: lab-4.ipynb
data analysis/lab-6/: Lab_6(1).ipynb
fp/hw0/: hw0.cabal
fp/hw0/src/HW0/: T1.hs  T2.hs  T4.hs
fp/hw1/: hw1.cabal
fp/hw3/: hw3.cabal
javascript-solutions/: functionalExpression.js  objectExpression.js
js-front/1/: source.js  рекомендации.txt
js-front/4/: source.js  рекомендации.txt
js-front/5/: рекомендации.txt
js-front/6/: source.js  рекомендации.txt
mt/lab1-perl/: 1_02.pl  1_03.pl  1_04.pl  1_05.pl  1_07.pl  1_08.pl  1_11.pl  2_02.pl  2_04.pl  2_07.pl  2_08.pl  2_09.pl  2_10.pl  3_02.pl
pds/distributed-fifo-paskudnicc/: solution.txt
(+633 files in other folders)
